# qr-factor-lab

./: .gitignore  README.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml
reports/: final_report.md
reports/tables/: backtest_summary.md  bootstrap_ic.md  cost_sensitivity.md  data.md  ic_summary.md
src/quant/: __init__.py  backtest.py  bootstrap.py  cli.py  data.py  fetch.py  metrics.py  pipeline.py  preprocess.py  report.py
tests/: test_backtest.py  test_bootstrap.py  test_cli.py  test_data.py  test_fetch.py  test_metrics.py  test_pipeline.py  test_preprocess.py  test_smoke.py
