[project]
name = "qr-factor-lab"
version = "0.1.0"
description = "A reproducible CSI 500 cross-sectional factor research framework."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "akshare",
    "pyarrow",
    "pytest",
    "pyyaml",
]

[project.scripts]
quant = "quant.cli:main"

[project.optional-dependencies]
dev = [
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quant"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "NPY"]
extend-select = ["A"]
[tool.ruff.lint.pep8-naming]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--basetemp=.pytest_tmp"

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
